Ensure inline wrappable links have a simpler focus offset

--- a/style.css
+++ b/style.css
@@ -501,6 +501,15 @@ main {
 		& + .wp-block-list {
 			margin-top: calc(-0.5 * var(--prose-spacing));
 		}
+
+		a {
+			--focus-offset: 0px;
+			--border-radius: 6px;
+			--border-top-left-radius: var(--border-radius);
+			--border-top-right-radius: var(--border-radius);
+			--border-bottom-left-radius: var(--border-radius);
+			--border-bottom-right-radius: var(--border-radius);
+		}
 	}
 }
 
